// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders hero 1`] = `
<section
  className="hero is-black"
>
  <div
    className="container"
  >
    <div
      className="columns is-mobile"
    >
      <div
        className="column is-11"
      >
        <div
          className="hero-center"
        >
          <img
            className="brand"
          />
          <h1
            className="title"
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders hero with title and brand 1`] = `
<section
  className="hero is-black"
>
  <div
    className="container"
  >
    <div
      className="columns is-mobile"
    >
      <div
        className="column is-11"
      >
        <div
          className="hero-center"
        >
          <img
            alt="bacon"
            className="brand"
            src="https://image.png"
          />
          <h1
            className="title"
          >
            bacon
          </h1>
        </div>
      </div>
    </div>
  </div>
</section>
`;
